# AIAgent-legal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.chroma_data/: chroma.sqlite3
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_drop_message_intent.py
docs/superpowers/plans/: 2025-06-24-intelligent-ai-assistant.md
docs/superpowers/specs/: 2025-06-24-intelligent-ai-assistant-design.md
profile/legal/: README.md  中华人民共和国刑法.md  中华人民共和国劳动合同法.md  中华人民共和国劳动法.md  中华人民共和国民法典.md  中华人民共和国消费者权益保护法.md
scripts/: download_legal_docs.py  download_rag_models.py  export_low_score_traces.py  ingest_knowledge.py  run_agent_benchmark.py  wait-for-it.sh
src/legal_assistant/: README.md  __init__.py  config.py  main.py
src/legal_assistant/api/: chat_service.py  routes.py  schemas.py
src/legal_assistant/evaluation/: __init__.py  golden_cases.yaml  llm_judge.py  rag_metrics.py
tests/: conftest.py
tests/evaluation/: conftest.py  test_agent_benchmark.py  test_llm_judge.py  test_rag.py
tests/helpers/: mock_llm.py
tests/integration/: test_api_chat.py
tests/unit/: test_chat_service.py  test_knowledge_retriever.py  test_memory_manager.py  test_memory_postgres.py  test_non_goals.py  test_observability.py  test_planner.py  test_rag_warmup.py  test_reranker.py  test_retriever_rerank.py  test_runtime_graph.py  test_weather_rules.py  test_weather_tool.py  test_web_features.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  index.css  types.ts
(+51 files in other folders)
