[project]
name = "legal-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "llama-index>=0.11.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-vector-stores-chroma>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "chromadb>=0.5.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "langfuse>=2.0.0",
    "prometheus-client>=0.20.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40,<5",
    "numpy<2",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-httpx>=0.30.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: LLM/API calls",
    "benchmark: agent E2E benchmark",
    "integration: requires docker services",
]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
